# Project_Data_Visulization

./: README.md
1. interpolation/assets/: data_vis.txt
1. interpolation/source/: CMakeLists.txt
1. interpolation/source/base-src/: GL.cpp  GL.h  Intersection.h  SliceRenderer.cpp  SliceRenderer.h  Tetrahedron.h  TextureRenderer.cpp  TextureRenderer.h  UniformGridVolume.cpp  UniformGridVolume.h  UnstructuredGridVolume.cpp  UnstructuredGridVolume.h
1. interpolation/source/exercise/: interpolation.cpp
1. interpolation/source/media/unstructured/: 1ogz.ele  1ogz.face  1ogz.node  colorcube.ele  colorcube.face  colorcube.node
1. interpolation/source/shaders/: geom_single_color.vert  raycast.vert  tex_quad.frag
2. marching cube/assets/: data_vis.txt
2. marching cube/src/base-src/: AABB.h  Intersection.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  Render.h  Tetrahedron.h  Triangulate.cpp  Triangulate.h  UniformGridVolume.cpp
2. marching cube/src/exercise/: marchingcubes.cpp
2. marching cube/src/shaders/: geom_multi_color.frag  mesh.frag  mesh.vert  raycast.frag  tex_quad.vert
3. casting ray/assets/: question d.txt
3. casting ray/source/base-src/: ColorPickerGUI.cpp  ColorPickerGUI.h  GL.cpp  GL.h  GUIComponent.h  GeometryRenderer.cpp  GeometryRenderer.h  RaycasterCPU.cpp  RaycasterCPU.h  RaycasterGPU.cpp  RaycasterGPU.h  Render.cpp  Trackball.h  TranferFunction.cpp  TransferFunction.h  TransferFunctionGUI.cpp  TransferFunctionGUI.h  Transform.h  UniformGridVolume.cpp  UniformGridVolume.h  Volume.h
3. casting ray/source/exercise/: raycasting.cpp
3. casting ray/source/shaders/: geom_multi_color.vert  geom_single_color.frag  raycast.frag  raycast.vert
